# Factolog

./: .gitignore  AST.md  CMakeLists.txt  Doxyfile  Doxyfile_for_dot  Makefile  PKGBUILD  grammar.md  language.md
doc/: AST.md  dot  dotConverter.py  precedence.md  summary.md  usage.md
include/: argumentParser.h  arithmeticCombinator.h  assignment.h  asyncExpression.h  autoDtor.h  base64.h  binaryExpression.h  blueprint.h  color.h  combinator.h  compilationUnit.h  compiler.h  connection.h  constantCombinator.h  dot.h  entity.h  exceptions.h  expression.h  factor.h  identifier.h  identifierT.h  lexemes.h  lexer.h  linkingUnit.h  matcher.h  mathLexemes.h  modules.h  number.h  parameters.h  parser.h  pole.h  position.h  signals.h  structureLexemes.h  term.h  token.h  translator.h  treenode.h  unaryExpression.h  value.h  (+2 more)
src/: argumentParser.cpp  arithmeticCombinator.cpp  assignment.cpp  asyncExpression.cpp  asyncModule.cpp  base64.cpp  binaryExpression.cpp  blueprint.cpp  color.cpp  combinator.cpp  compilationUnit.cpp  compiler.cpp  constantCombinator.cpp  dot.cpp  entity.cpp  exceptions.cpp  expression.cpp  factolog.cpp  factor.cpp  identifier.cpp  identifierT.cpp  lexer.cpp  linkingUnit.cpp  moduleConnection.cpp  number.cpp  parameter.cpp  parameterList.cpp  parameterListDeclaration.cpp  pole.cpp  position.cpp  term.cpp  token.cpp  translator.cpp  unaryExpression.cpp  value.cpp  valueExpression.cpp  variableDeclaration.cpp
tests/: 4_1mul.fl  argumentParser_test.cpp  arithmeticCombinator_test.cpp  assignment_test.cpp  base64_test.cpp  basicLexer.fl  blueprint_test.cpp  color_test.cpp  compiler.fl  compiler_test.cpp  dot_test.cpp  (+18 more)
(+2 files in other folders)
